--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -35,6 +35,24 @@
 
 .card {
   padding: 2em;
+  position: relative;
+}
+
+button {
+  border: none;
+  border-radius: 3px;
+  font-style: italic;
+  font-size: 0.8em;
+  margin: 4px 6px;
+  width: 50px;
+  height: 25px;
+}
+
+.doneButton {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  color: green;
 }
 
 .read-the-docs {
@@ -83,4 +101,22 @@ div {
   font-weight: bold;
   font-size: 1.2em; 
 }
+
+button {
+  border: none;
+  border-radius: 3px;
+  font-style: italic;
+  font-size: 0.8em;
+  margin: 4px 6px;
+  width: 50px;
+  height: 25px;
+}
+
+.doneButton {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  color: green;
+}
+
 
