--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -55,6 +55,13 @@ button {
   color: green;
 }
 
+.deleteButton {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  color: red;
+}
+
 .read-the-docs {
   color: #888;
 }
